Update linux_oracle_simple.cmd